--- a/argocd/image/image.yaml
+++ b/argocd/image/image.yaml
@@ -9,7 +9,7 @@ spec:
   allowedRegistriesForImport:
     - domainName: quay.io
       insecure: false
-  registrySources:
-    allowedRegistries:
-    - quay.io
-    - registry.redhat.io
+#  registrySources:
+#    allowedRegistries:
+#    - quay.io
+#    - registry.redhat.io
